# fvr

./: .gitignore  INSTALL  README.md  pyproject.toml
docs/: Makefile
docs/src/: conf.py  index.rst
docs/src/_static/: documentation_options.js
src/fvr/: __init__.py  cad.py  geom.py  geom2d.py  structure.py  typing.py  wire.py
tests/: test_geom2d.py  test_structure.py
