[project]
name = "fvr"
dynamic = ["version"]
description = "Various tools"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
authors = [
  { name = "Daniel Weschke", email = "daniel.weschke@directbox.de" },
]
keywords = [
  "mechanics", "materials",
]
readme = "README.md"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
docs = ["sphinx", "furo"]
test = ["pytest>=9.0"]
dev = [
  # recursive optional dependencies
  "fvr[docs,test]",
  # Useful for building quick scripts, https://github.com/google/python-fire
  "fire",
  # Code quality tools
  "mypy",
  # # Improved exception traceback output
  # # https://github.com/qix-/better-exceptions
  # "better_exceptions",
  # # Analyzing dependencies
  # # install graphviz to generate graphs
  # "graphviz",
  # "pipdeptree",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "fvr.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fvr*"]
# namespaces = false

[tool.pytest]
addopts = ["--doctest-modules", "--doctest-continue-on-failure"]
testpaths = [
  "tests",
  "src/fvr",
]
filterwarnings = [
  # "ignore::DeprecationWarning",
  # in ezdxf/queryparser.py
  "ignore:'.*' deprecated - use '.*':DeprecationWarning",
]
